<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="60dp"
    android:background="@drawable/rectangular_shape"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="45dp"
        android:id="@+id/back"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="55dp"
        android:background="@drawable/delete"
        android:layout_height="45dp" />

    <LinearLayout
        android:id="@+id/ll_print_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaabold"
            android:text="@string/number_of_printing_copy"
            android:layout_weight="1"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/no_value"
            android:layout_width="0dp"
            android:background="@drawable/rectangular_shape"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="gone"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="number"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_print_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_print_copy"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaabold"
            android:text="@string/print_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center" />

        <RadioGroup
            android:id="@+id/print_size_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <RadioButton
                android:id="@+id/regular_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regular"
                android:textColor="@color/colorBlack"
                android:checked="true"
                android:textSize="24sp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

            <RadioButton
                android:id="@+id/medium_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

            <RadioButton
                android:id="@+id/large_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/large"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="35sp"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:fontFamily="@font/comfortaabold"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:id="@+id/submiit"
        android:paddingBottom="10dp"
        android:layout_below="@id/ll_print_size"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>